<resources>
    <string name="app_name">My First Application</string>
    <string name="name_hint">Insert your name</string>
    <string name="name_value">...</string>
    <string name="button_submit_value">Submit</string>
    <string name="name_greet">My name is: </string>
    <string name="name_empty">Name field is empty!</string>

    <!-- Strings for the number functionality -->
    <string name="number_hint">Insert a number</string>
    <string name="number_value">-</string>
    <string name="number_greet">My student number is: </string>
    <string name="number_empty">Number field is empty!</string>
    <string name="number_invalid_length">Student number has to be 11 digits long</string>
</resources>
